--- a/src/app/components/demo-binding/demo-binding.component.html
+++ b/src/app/components/demo-binding/demo-binding.component.html
@@ -18,4 +18,4 @@
 
 <h3>Binding d'evenement</h3>
 
-<button (click)="onClick($event)">click</button>
+<button (click)="switchColor()">click</button>
