--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -2,8 +2,9 @@
 
 <div>
     <a routerLink="./binding">binding</a><br>
-    <a routerLink="./d2">d2</a>
-    <a routerLink="./directives">directives</a>
+    <a routerLink="./d2">d2</a><br>
+    <a routerLink="./directives">directives</a><br>
+    <a routerLink="./commu">commu</a><br>
 </div>
 
 <router-outlet></router-outlet>
