--- a/src/app/exo/exo.component.html
+++ b/src/app/exo/exo.component.html
@@ -1,9 +1,11 @@
 <h2>Les exos</h2>
 
 <div>
-    <a routerLink="./binding">exo1 binding</a>
-    <a routerLink="./chrono">exo2 chrono</a>
-    <a routerLink="./produits">exo3 produits</a>
+    <a routerLink="./binding">exo1 binding</a><br>
+    <a routerLink="./chrono">exo2 chrono</a><br>
+    <a routerLink="./produits">exo3 produits</a><br>
+    <a routerLink="./commu">exo4 communications</a><br>
+    <a routerLink="./personnes">exo5 personnes</a><br>
 </div>
 
 <router-outlet></router-outlet>
