--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -5,6 +5,7 @@
     <a routerLink="./d2">d2</a><br>
     <a routerLink="./directives">directives</a><br>
     <a routerLink="./commu">commu</a><br>
+    <a routerLink="./forms">forms</a><br>
 </div>
 
 <router-outlet></router-outlet>
