--- a/src/app/exo/exo.component.html
+++ b/src/app/exo/exo.component.html
@@ -6,6 +6,7 @@
     <a routerLink="./produits">exo3 produits</a><br>
     <a routerLink="./commu">exo4 communications</a><br>
     <a routerLink="./personnes">exo5 personnes</a><br>
+    <a routerLink="./produits-form">exo6 produits-form</a><br>
 </div>
 
 <router-outlet></router-outlet>
