--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1> Bienvenu sur mon site: {{ title + " le titre" }} {{ 1+1 }} </h1>
 
 <nav>
+    <a routerLink="/accueil">accueil</a><br>
     <a routerLink="/demo">demo</a><br>
     <a routerLink="/exo">exo</a>
 </nav>
