--- a/src/app/exo/exo.component.html
+++ b/src/app/exo/exo.component.html
@@ -7,6 +7,7 @@
     <a routerLink="./commu">exo4 communications</a><br>
     <a routerLink="./personnes">exo5 personnes</a><br>
     <a routerLink="./produits-form">exo6 produits-form</a><br>
+    <a routerLink="./menu-produits">exo7 menu</a>-<a routerLink="./panier-produits">exo7 paniers</a><br>
 </div>
 
 <router-outlet></router-outlet>
