--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,1 +1,15 @@
 <h1>Bonjour</h1>
+
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div>
+        <label for="">username</label><br>
+        <input type="text" id="login-user" formControlName="username">
+    </div>
+    
+    <div>
+        <label for="">password</label><br>
+        <input type="text" id="login-password" formControlName="password">
+    </div>
+
+    <button type="submit">Connect</button>
+</form>
