--- a/src/app/exo/exo2/exo2.component.html
+++ b/src/app/exo/exo2/exo2.component.html
@@ -7,3 +7,7 @@
         <button (click)="select()">Format</button>
     </p>
 </div>
+
+<br><br><br><br><br>
+
+<p>Objectif actuel : {{objectifActuel}} </p>
