--- a/src/app/exo/exo7-menu/exo7-menu.component.html
+++ b/src/app/exo/exo7-menu/exo7-menu.component.html
@@ -1,30 +1,6 @@
-<h4>Formulaire d'insertion de produits</h4>
+<h4>Liste des produits</h4>
 
-<form [formGroup]="produitInsertForm" (ngSubmit)="onSubmit()">
-
-    <div>
-        <label for="produit-marque">Marque</label><br>
-        <input type="text" id="produit-marque" formControlName="marque">
-    </div>
-    <div>
-        <label for="produit-modele">Modele</label><br>
-        <input type="text" id="produit-modele" formControlName="modele">
-    </div>
-    <div>
-        <label for="produit-prix">Prix</label><br>
-        <input type="number" id="produit-prix" formControlName="prix">
-    </div>
-
-    <div>
-        <label for="produit-stock">Stock</label><br>
-        <input type="number" id="produit-stock" formControlName="stock">
-    </div>
-
-    <div>
-        <input type="checkbox" id="produit-envente"  formControlName="enVente">
-        <label for="produit-envente"> en vente </label>
-    </div>
-
-    <button type="submit">Insert</button>
-
-</form>
+<div *ngFor="let p of listeProduits">
+    Marque : {{p.marque}} | Modele : {{p.modele}} | Stock : {{p.stock}} 
+    | Prix : {{p.prix}} | <button [disabled]="p.stock === 0" (click)="add(p)">Ajouter</button>
+</div>
