--- a/src/app/exo/exo-binding/exo-binding.component.html
+++ b/src/app/exo/exo-binding/exo-binding.component.html
@@ -10,3 +10,7 @@
     <p> nbr validé : {{ nbrValide }} </p>
     <p> dernier validé : {{ dernierValide }} </p>
 </div>
+
+<h3>Exo service</h3>
+
+<input type="text" [(ngModel)]="inputService"><button (click)="modifier()">Modifier</button>
