--- a/src/app/demo/components/demo-commu-enfant/demo-commu-enfant.component.html
+++ b/src/app/demo/components/demo-commu-enfant/demo-commu-enfant.component.html
@@ -1,3 +1,5 @@
 <p>{{infoRecup}}</p>
 
 <input type="color" [(ngModel)]="color" (change)="onChange()">
+<p>Objectif actuel : {{objectifActuel}} </p>
+<button (click)="nouvelObjectif()">Afficher</button>
