--- a/src/app/demo/components/demo-commu/demo-commu.component.html
+++ b/src/app/demo/components/demo-commu/demo-commu.component.html
@@ -2,4 +2,6 @@
 
 <input type="text" [(ngModel)]="info">
 
+<input type="text" [(ngModel)]="inputService"><button (click)="modifier()">Modifier</button>
+
 <app-demo-commu-enfant [getInfo]="info" (colorEmitter)="setColor($event)"></app-demo-commu-enfant>
