--- a/src/app/exo/exo.component.html
+++ b/src/app/exo/exo.component.html
@@ -8,6 +8,7 @@
     <a routerLink="./personnes">exo5 personnes</a><br>
     <a routerLink="./produits-form">exo6 produits-form</a><br>
     <a routerLink="./menu-produits">exo7 menu</a>-<a routerLink="./panier-produits">exo7 paniers</a><br>
+    <a routerLink="./services">exo8 services</a>
 </div>
 
 <router-outlet></router-outlet>
