--- a/src/app/exo/exo9/exo9.component.html
+++ b/src/app/exo/exo9/exo9.component.html
@@ -25,5 +25,6 @@
     <p>id: {{p.id}}</p>
     <p>nom: {{p.nom}}</p>
     <p>type: {{p.type}}</p>
-    <p>prix: {{p.prix}}</p>
+    <p>prix: {{p.prix | currency:'EUR'}}</p>
+    <button>Details</button>
 </div>
